# rag_ingestion_pipeline

./: .gitignore  README.md  pyproject.toml
notebook/: document.ipynb  pdf_loader.ipynb
