[project]
name = "ytrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.2.2",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.31.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "sentence-transformers>=5.1.2",
]
